<resources>
    <string name="app_name">한끼해요</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="bottom_nav_tab1">메인</string>
    <string name="bottom_nav_tab2">FOOD\nGROUP</string>
    <string name="bottom_nav_tab3">친구</string>
    <string name="bottom_nav_tab4">쪽지함</string>
    <string name="bottom_nav_tab5">맛집\n게시판</string>
    <string name="menu_item1">프로필 설정</string>
    <string name="menu_item2">환전</string>
    <string name="menu_item3">알림</string>
    <string name="menu_item4">수신 설정</string>
    <string name="menu_item5">이용약관</string>
    <string name="menu_item6">탈퇴</string>
    <string name="menu_item7">버전</string>
</resources>
