<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="설정"
            android:textSize="30dp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/menu_item1"
                android:textSize="20dp"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/menu_item2"
                android:textSize="20dp"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/menu_item3"
                android:textSize="20dp"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/menu_item4"
                android:textSize="20dp"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/menu_item5"
                android:textSize="20dp"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/menu_item6"
                android:textSize="20dp"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/menu_item7"
                android:textSize="20dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>